fixed spacing on call card

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ ul {
   display: flex;
   margin-left: auto;
   margin-right: 0;
+  margin-top: 24px;
 }
 
 footer{
@@ -122,7 +123,8 @@ margin-right: 16px;
 }
 
 .callCard {
-  margin: auto 16px;
+  margin: 24px;
+  margin-top: 8px;
   font-size: 48px
 }
 
